# pysleeper

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json
.github/workflows/: cd.yml  ci.yml  python-package.yml  test.yml
docs/: greeting.md
greeting/: index.html
notebooks/: misc.ipynb
search/: search_index.json
src/sleeper/: greeting.py
tests/unit/test_sleeper/: test_greeting.py
